Updated the fonts

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
   <title>Spoon and Pepper - Home</title>
     <link rel="stylesheet" type="text/css" href="css/grid.css">
+    <link rel="stylesheet" type="text/css" href="css/font.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
     <link rel="stylesheet" type="text/css" href="css/image-style.css">
     <link rel="stylesheet" type="text/css" href="css/navigator.css">
