--- a/parts/header.html
+++ b/parts/header.html
@@ -31,11 +31,11 @@
         <section class="col-md-4 col-icon first-set-icon">
             <section class="row">
                 <section class="col-md-6">
-                    <img class="list-icon" src="img/header/the-workforce-menu-item.png">
+                    <a href="#"><img class="list-icon" src="img/header/the-workforce-menu-item.png"></a>
                 </section>
 
                 <section class="col-md-6">
-                    <img class="list-icon" src="img/header/menu-and-packages-menu-item.png">
+                    <a href="#"><img class="list-icon" src="img/header/menu-and-packages-menu-item.png"></a>
                 </section>
             </section>
         </section>
@@ -52,11 +52,11 @@
         <section class="col-md-4 col-icon second-set-icon">
             <section class="row">
                 <section class="col-md-6">
-                    <img class="list-icon" src="img/header/testimonials-menu-item.png">
+                    <a href="#"><img class="list-icon" src="img/header/testimonials-menu-item.png"></a>
                 </section>
 
                 <section class="col-md-6">
-                    <img class="list-icon" src="img/header/customer-rewards-menu-item.png">
+                    <a href="#"><img class="list-icon" src="img/header/customer-rewards-menu-item.png"></a>
                 </section>
             </section>
         </section>
