Added the home link

--- a/parts/header.html
+++ b/parts/header.html
@@ -43,7 +43,8 @@
         <section class="col-md-4 col-logo">
             <section class="row">
                 <section class="col-md-12 position-logo">
-                    <img alt="" class="comp-logo" src="img/header/s&amp;p-logo.png"> <a href="#"><span class=
+                    <a href="/"><img alt="" class="comp-logo" src="img/header/s&amp;p-logo.png"></a>
+                    <a href="#"><span class=
                     "book-online">Book Online</span></a>
                 </section>
             </section>
