--- a/parts/footer.html
+++ b/parts/footer.html
@@ -81,6 +81,6 @@
     </section>
 
     <section class="right col-md-6">
-        <a href="#">Designed and Developed by Webnified <img class="web" src="img/web.png"></a>
+        <a href="#">Designed and Developed by Webnified <img class="webnified" src="img/web.png"></a>
     </section>
 </section>
