Implicit height for the cuisine slide
Updated the scripts

--- a/parts/header.html
+++ b/parts/header.html
@@ -1,28 +1,28 @@
 <section class="row image-wrapper">
     <ul class="images-rotator">
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/Beef%20Cuisine/Beef%20Tapa.jpg" style=
+        <li class="food-tray"><img class="img-size rotator-img" src="img/media/slider/Beef%20Cuisine/Beef%20Tapa.jpg" style=
         "display: inline;"></li>
 
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/Beef%20Cuisine/Beef%20Crisp.jpg" style=
+        <li class="food-tray"><img class="img-size rotator-img" src="img/media/slider/Beef%20Cuisine/Beef%20Crisp.jpg" style=
         "display: inline;"></li>
 
         <li class="food-tray"><img class="img-size rotator-img" src=
-        "img/media/Chicken%20Cuisine/Breaded%20Chicken%20w%20Mayo%20Dip.jpg" style="display: inline;"></li>
+        "img/media/slider/Chicken%20Cuisine/Breaded%20Chicken%20w%20Mayo%20Dip.jpg" style="display: inline;"></li>
 
         <li class="food-tray"><img class="img-size rotator-img" src=
-        "img/media/Chicken%20Cuisine/Chicken%20Cordon%20Blue.jpg" style="display: inline;"></li>
+        "img/media/slider/Chicken%20Cuisine/Chicken%20Cordon%20Blue.jpg" style="display: inline;"></li>
 
         <li class="food-tray"><img class="img-size rotator-img" src=
-        "img/media/Chicken%20Cuisine/Bavarian%20Chicken.jpg" style="display: inline;"></li>
+        "img/media/slider/Chicken%20Cuisine/Bavarian%20Chicken.jpg" style="display: inline;"></li>
 
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/Beef%20Cuisine/Beef%20Ham.jpg" style=
+        <li class="food-tray"><img class="img-size rotator-img" src="img/media/slider/Beef%20Cuisine/Beef%20Ham.jpg" style=
         "display: inline;"></li>
 
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/Chicken%20Cuisine/Buffalo%20Chicken.jpg"
+        <li class="food-tray"><img class="img-size rotator-img" src="img/media/slider/Chicken%20Cuisine/Buffalo%20Chicken.jpg"
         style="display: inline;"></li>
 
         <li class="food-tray"><img class="img-size rotator-img" src=
-        "img/media/Beef%20Cuisine/Beef%20Steak%20Tagalog.jpg" style="display: inline;"></li>
+        "img/media/slider/Beef%20Cuisine/Beef%20Steak%20Tagalog.jpg" style="display: inline;"></li>
     </ul>
 </section>
 
@@ -44,8 +44,8 @@
             <section class="row">
                 <section class="col-md-12 position-logo">
                     <a href="/"><img alt="" class="comp-logo" src="img/header/s&amp;p-logo.png"></a>
-                    <a href="#"><span class=
-                    "book-online">Book Online</span></a>
+                    <a href="#"><button class=
+                    "book-online">Book Online</button></a>
                 </section>
             </section>
         </section>
