--- a/parts/footer.html
+++ b/parts/footer.html
@@ -39,7 +39,7 @@
         </section>
 
         <section class="address">
-            10th -21st Nazareth, Cagayan de Oro City, 9000, Philippines spoonandpepperfoods@gmail.com
+            10th -21st Nazareth, Cagayan de Oro City, 9000, Philippines centraloffice@ spoonandpepper.com
         </section>
 
         <section>
