Beautified workforce page

--- a/pages/workforce.html
+++ b/pages/workforce.html
@@ -1,171 +1,100 @@
-<html>
-  <head>
-    <link rel="stylesheet" href="css/workforce.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" type="text/css" href="css/image-style.css">
-    <link rel="stylesheet" type="text/css" href="css/navigator.css">
-    <link rel="stylesheet" type="text/css" href="css/grid.css">
-  </head><body>
-  <section class="container">
-  <section id="header">
-    <section class="row image-wrapper">
-      <ul class="images-rotator">
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/Beef Cuisine/Beef Caldereta.jpg"></li>
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/Beef Cuisine/Beef Crisp.jpg"></li>
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/Beef Cuisine/Beef Ham.jpg"></li>
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/Chicken Cuisine/Chicken Alfredo.jpg"></li>
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/Beef Cuisine/Beef Steak Tagalog.jpg"></li>
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/Chicken Cuisine/Chicken Cordon Blue.jpg"></li>
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/Chicken Cuisine/Buffalo Chicken.jpg"></li>
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/Beef Cuisine/Corned Tenderloin Beef.jpg"></li>
-      </ul>
+<section class="workforce-inner-container">
+    <section class="workforce">
+        The Workforce
     </section>
-    
-    <section class="row navigator">
-      <section class="row">
 
-      <section class="col-md-4 col-icon first-set-icon">
-        <section class="row">
-          <section class="col-md-6 ">
-            <img src="img/header/the-workforce-menu-item.png" class="list-icon">
-          </section>
-          <section class="col-md-6 ">
-            <img src="img/header/menu-and-packages-menu-item.png" class="list-icon">
-          </section>
-        </section>
-      </section>
-
-      <section class="col-md-4 col-logo">
-        <section class="row">
-         <section class="col-md-12 position-logo ">
-          <img src="img/header/s&p-logo.png" alt="" class="comp-logo">
-          <a href="#"><span class="book-online">Book Online</span></a>
-         </section>
-        </section>
-      </section>
-
-       <section class="col-md-4 col-icon second-set-icon">
-        <section class="row">
-          <section class="col-md-6 ">
-            <img src="img/header/testimonials-menu-item.png" class="list-icon">
-          </section>
-          <section class="col-md-6 ">
-            <img src="img/header/customer-rewards-menu-item.png" class="list-icon">
-          </section>
-        </section>
-        </section>
-
-      </section>
-    </section>
-  </section>
-    <section class="workforce-inner-container">
-    <section class="workforce">The Workforce</section>
     <section class="members row">
-      <section class="member-img col-md-4">
-        <img class="inner-img" src="img/logo.png">
-      </section>
-      <section class="member">
-      <section class="member-title">About the Company</section>
-      <section class="member-description">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
-      </section>
-    </section>
-  </section>
-  <section class="members row">
-    <section class="member-img col-md-4">
-      <img class="inner-img" src="img/workforce/rupert.jpg">
-    </section>
-    <section class="member col-md-8">
-      <h2>Rupert Jason E. Musni</h2>
-    <section class="member-title">President | CEO</section>
-    <section class="member-description">
-      <p>Our 3rd Anniversary take off is challenging both internally and externally. We prayed for inspirations, then we've thought of making your memories great.</p>
-      <p>It is our reward to touch more lives and so, we conspired our missions that paved us to develop National Catering Service Operations starting with Cebu City, Davao City and Makati City by November 2017. Stay with us by few more, then altogether set our standards as an Official Philippine Catering Service Company by 2020.</p>
-    <p>All starts today. <strong>Reach us, then let's finalize.</strong></p></section>
-  </section>
-</section>
-<section class="members row">
-  <section class="member-img col-md-4">
-    <img class="inner-img" src="img/workforce/may.jpg">
-  </section>
-  <section class="member col-md-8">
-    <h2>May Flor E. Musni</h2>
-  <section class="member-title">Vice President - Service Operations </section>
-  <section class="member-description"><p>In 2014, we are proud to launch our system-based training and orientation process for customer servicing, food handling and sanitation, buffet service technology set-up and well-designed service team uniforms. Internal processes deliver maximum assurance in Food Management Quality from production, delivery, set-up, dining process, and dish-out.</p>
-    
-    <p>We will be seeing you smiling before and after your important events. <strong>Contact us today</strong>.</p>
-  </section>
-</section>
-</section><section class="members row">
-<section class="member-img col-md-4">
-<img class="inner-img" src="img/workforce/noelyn.jpg">
-</section>
-<section class="member col-md-8"><h2>Noelyn E. Ang</h2>
-<section class="member-title">Operations &amp; Sales Head </section>
-<section class="member-description">  <p>There could never be another Philippine Catering Service, consistent in setting up the standards for buffet technology invention, food and service quality, production safety and sanitation, big event service capacity, advanced internal operations procedure and the first catering service company to launch - BOOKING ONLINE!</p>
-<p>There could ever be another Filipino Customer like you, that we respect and we are built in service for.
-Let us handle your intimate and big events. <strong>Reach us, then let's finalize.</strong></p>
-</section>
-</section>
-</section>
-</section>
-<section class="footer-inner-container">
-<section class="row">
+        <section class="member-img col-md-4">
+            <img class="inner-img" src="img/logo.png">
+        </section>
 
-<section class="about col-md-3">
-<section class="footer-titles">About Spoon and Pepper</section>
-<section class="address">Cagayan de Oro City based Catering Services.  </section>
-<section class="list">
-<ul>
-<section class="accepts"> Accpets:</section>
-<li>Executive Buffet </li>
-<li>Cocktail Buffet</li>
-<li>Wedding Buffet </li>
-<li>Per Tray </li>
-<li>Packed Meals &amp; Snacks </li>
+        <section class="member">
+            <section class="member-title">
+                About the Company
+            </section>
 
-</ul>
+            <section class="member-description">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+                eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+                accusantium doloremque laudantium, totam rem
+            </section>
+        </section>
+    </section>
+
+    <section class="members row">
+        <section class="member-img col-md-4">
+            <img class="inner-img" src="img/workforce/rupert.jpg">
+        </section>
+
+        <section class="member col-md-8">
+            <h2>Rupert Jason E. Musni</h2>
+
+            <section class="member-title">
+                President | CEO
+            </section>
+
+            <section class="member-description">
+                <p>Our 3rd Anniversary take off is challenging both internally and externally. We prayed for
+                inspirations, then we've thought of making your memories great.</p>
+
+                <p>It is our reward to touch more lives and so, we conspired our missions that paved us to develop
+                National Catering Service Operations starting with Cebu City, Davao City and Makati City by November
+                2017. Stay with us by few more, then altogether set our standards as an Official Philippine Catering
+                Service Company by 2020.</p>
+
+                <p>All starts today. <strong>Reach us, then let's finalize.</strong></p>
+            </section>
+        </section>
+    </section>
+
+    <section class="members row">
+        <section class="member-img col-md-4">
+            <img class="inner-img" src="img/workforce/may.jpg">
+        </section>
+
+        <section class="member col-md-8">
+            <h2>May Flor E. Musni</h2>
+
+            <section class="member-title">
+                Vice President - Service Operations
+            </section>
+
+            <section class="member-description">
+                <p>In 2014, we are proud to launch our system-based training and orientation process for customer
+                servicing, food handling and sanitation, buffet service technology set-up and well-designed service
+                team uniforms. Internal processes deliver maximum assurance in Food Management Quality from production,
+                delivery, set-up, dining process, and dish-out.</p>
+
+                <p>We will be seeing you smiling before and after your important events. <strong>Contact us
+                today</strong>.</p>
+            </section>
+        </section>
+    </section>
+
+    <section class="members row">
+        <section class="member-img col-md-4">
+            <img class="inner-img" src="img/workforce/noelyn.jpg">
+        </section>
+
+        <section class="member col-md-8">
+            <h2>Noelyn E. Ang</h2>
+
+            <section class="member-title">
+                Operations &amp; Sales Head
+            </section>
+
+            <section class="member-description">
+                <p>There could never be another Philippine Catering Service, consistent in setting up the standards for
+                buffet technology invention, food and service quality, production safety and sanitation, big event
+                service capacity, advanced internal operations procedure and the first catering service company to
+                launch - BOOKING ONLINE!</p>
+
+                <p>There could ever be another Filipino Customer like you, that we respect and we are built in service
+                for. Let us handle your intimate and big events. <strong>Reach us, then let's finalize.</strong></p>
+            </section>
+        </section>
+    </section>
 </section>
-</section>
-<section class="contact col-md-3">
-<section class="footer-titles">Contact Spoon and Pepper</section>
-<section class="contan-num">
-              <p>324-0806</p>
-              <p>09177002118</p>
-</section>
-<section class="address">10th -21st Nazareth, Cagayan de Oro City, 9000, Philippines
-spoonandpepperfoods@gmail.com</section>
-<section>
-<ul class="unstyled">
-<li><a href="#"><img class="icon" src="img/twitter.png"></a></li>
-<li><a href="#"><img class="icon" src="img/FB.png"></a></li>
-</ul>
-</section>
-<section class="footer-titles">Share us on</section>
-<section class="logo">
-<a href="#"><img class="icon" src="img/twitter.png"></a>
-<a href="#"><img class="icon" src="img/FB.png"></a>
-<a href="#"><img class="icon" src="img/Instagram.png"></a>
-</section>
-</section>
-<section class="map col-md-6">
-<section class="footer-titles">Visit Us today:</section>
-<section>
-<img  class="map-img" src="img/map.png">
-<img  class="spot" src="img/spot.png">
-</section>
-</section>
-</section>
-<section class="copyright row">
-<section class="col-md-6">&copy; Copyright 2014 Spoon &amp; Pepper.</section>
-<section class="right col-md-6">
-Designed and Developed by Webnified
-<img class="web" src="img/web.png">
-</section>
-</section>
-</section>
-</section>
-<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
-<script src="lib/script.js"></script>
-</body></html>
